# SEL-Lesson-Generator

./: .replit  lesson.txt  lesson_slides.pptx  main.py  models.py  pyproject.toml
attached_assets/: Pasted--I-m-getting-this-command-when-i-press-the-voice-command-ChatGPT-said-Thanks-for-the-screenshot-T-1753137376952_1753137376953.txt  Pasted--PHASE-1-Standards-Tagging-Slide-PPTX-Export-PART-A-Standards-Tagging-Auto-Tag-Lessons--1753145296005_1753145296007.txt  Pasted--PHASE-2-Dynamic-Context-Aware-Copilot-Goal-Make-the-Copilot-sidebar-actually-think-based-on--1753145549023_1753145549026.txt  Pasted--STEP-1-Add-a-Dashboard-Route-to-Your-App-File-app-py-Location-Near-your-other-app-rou-1753135644072_1753135644074.txt  Pasted--TASK-1-Add-SQLite-Saving-for-SEL-Lessons-Why-we-re-doing-this-Right-now-lessons-vanish-after-1753135300045_1753135300046.txt  Pasted--TASK-10-Add-Copilot-Sidebar-Panel-to-BeaconSEL-Why-we-re-doing-this-Teachers-often-ask-What-1753142590160_1753142590161.txt  Pasted--TASK-12-Add-Save-Copilot-Tip-to-Teaching-Journal-Why-this-matters-Makes-Copilot-suggesti-1753145997311_1753145997313.txt  Pasted--TASK-3-Polish-the-UI-to-Match-Beacon-IEP-Now-Called-BeaconSEL-Why-we-re-doing-this-BeaconSE-1753136109088_1753136109089.txt  Pasted--TASK-4-Fix-format-Bug-Switch-to-Proper-Template-Rendering-Why-we-re-doing-this-You-re-cu-1753137026250_1753137026251.txt  Pasted--TASK-7-Add-Quick-Prompt-Buttons-One-Click-Templates-Why-we-re-doing-this-Teachers-are-tir-1753141613758_1753141613758.txt  (+1 more)
templates/: dashboard.html  index.html  layout.html  lesson_detail.html
