[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "openai>=1.95.1",
    "python-dotenv>=1.1.1",
    "reportlab==4.2.5",
    "python-pptx>=1.0.2",
]
